# modulus2-lib

./: .gitmodules  CMakeLists.txt  LICENSE  PREFIX  README.md  build-windows.cmd  build.sh  library.cmake  update.sh  update_dependencies.sh
2ndparty/: CMakeLists.txt  download.sh
cmake/: Spdlog.cmake
demo/: CMakeLists.txt
demo/loader_plugin/: CMakeLists.txt  api.hpp  m1.cpp  m2.cpp  m3.cpp  m4.cpp  main.cpp
demo/quit_plugin/: CMakeLists.txt  main.cpp
demo/spdlog_logger/: CMakeLists.txt  main.cpp
include/pfs/: iostream_logger.hpp  modulus2.hpp  timer_pool.hpp
include/pfs/modulus/: bundle.hpp  iostream_logger.hpp  mangling.hpp  modulus.hpp  namespace.hpp
include/pfs/modulus/plugins/: dl_loader.hpp  loader.hpp  module_lifetime.hpp  platform_quit.hpp  posix_quit.hpp  quit.hpp  timer_quit.hpp  win32_quit.hpp
include/pfs/modulus2/: bundle.hpp  dl_loader_plugin.hpp  in_memory_settings_plugin.hpp  iostream_logger.hpp  loader_plugin.hpp  mangling.hpp  module_lifetime_plugin.hpp  modulus2.hpp  namespace.hpp  posix_quit_plugin.hpp  quit_plugin.hpp  settings_plugin.hpp  spdlog_logger.hpp  timer_pool.hpp  timer_quit_plugin.hpp
include/pfs/modulus2/plugins/: debby_settings.hpp  dl_loader.hpp  in_memory_settings.hpp  loader.hpp  module_lifetime.hpp  platform_quit.hpp  posix_quit.hpp  quit.hpp  rocksdb_settings.hpp  settings.hpp  sqlite3_settings.hpp  timer_quit.hpp  win32_quit.hpp
locale/: modulus2.pot  modulus2.ru.po  modulus2_ru.po
scripts/: build-linux.sh  build.cxx11.cmd  build.cxx11.sh
tests/: CMakeLists.txt  mangling.cpp  modulus2.cpp  modulus2basic.cpp  modulus_basic.cpp  settings.cpp  settings_plugin.cpp
