################################################################################
# Copyright (c) 2021 Vladislav Trifochkin
#
# This file is part of [modulus2-lib](https://github.com/semenovf/modulus2-lib) library.
#
# Changelog:
#      2021.06.18 Initial version.
################################################################################
# add_subdirectory(quit_plugin)
# add_subdirectory(loader_plugin)
# add_subdirectory(spdlog_logger)
