################################################################################
# Copyright (c) 2021-2025 Vladislav Trifochkin
#
# This file is part of `modulus2-lib`.
#
# Changelog:
#      2021.06.18 Initial version.
################################################################################
add_subdirectory(loader_plugin)
add_subdirectory(quit_plugin)
